<resources>
	<string name="app_ver">Version</string>
	<string name="create">Create</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="confirm">Confirmation</string>
	<string name="confirm_delete">Are you sure to delete?</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="ok">OK</string>
	<string name="date">Date</string>
	<string name="odometer_unit">Odometer Unit</string>
	<string name="comments">Comments</string>
	<string name="deleteActive">You cannot delete active car!</string>
    <string name="app_name">Car Logbook</string>
    <string name="menu_item_log">Logbook</string>
    <string name="menu_item_reports">Reports</string>
    <string name="menu_item_my_cars">My Cars</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="share">Share</string>
    <string name="share_title">CarLogbook</string>
    <string name="add_car">Add Car</string>
    <string name="add_fuel_log">Add fuel event</string>
    <string name="add_log">Add event</string>
    <string name="add_notify">Add Notification</string>
    <string name="log_title">Add Event</string>
    <string name="log_title_edit">Edit Event</string>
    <string name="log_name">Name</string>
    <string name="erro_log_name">Name is not correct</string>
    <string name="error_date">Date is not correct</string>
    <string name="log_type">Type</string>
    <string name="log_price">Cost</string>
    <string name="log_f">F: </string>
    <string name="log_p">P: </string>
	<string name="value_car_error">Please add a car!</string>
    <string name="log_fuel_title">Add Fuel Event</string>
    <string name="log_fuel_title_edit">Edit Fuel Event</string>
    <string name="log_fuel_odometer">Odometer</string>
    <string name="log_fuel_price">Price(1 unit)</string>
    <string name="log_fuel_volume">Fuel volume</string>
	<string name="log_fuel_price_total">Cost(total)</string>
	<string name="log_fuel_type">Fuel type</string>
	<string name="log_fuel_gas_station">Gas Station</string>
	<string name="error_odometer">Odometer is not correct</string>
	<string name="error_price">Price value is not correct</string>
	<string name="error_cost">Cost value is not correct</string>
	<string name="error_fuel">Fuel value is not correct</string>
    <string name="notify_title">Add Notification</string>
    <string name="notify_title_edit">Edit Notification</string>
    <string name="notify_type">Type</string>
	<string name="sett_fuel_type">Fuel type values</string>
	<string name="sett_stations">Gas station values</string>
	<string name="sett_stations_add_gas">Add gas station</string>
	<string name="sett_stations_edit_gas">Edit gas station</string>
	<string name="sett_stations_add_fuel">Add fuel type</string>
	<string name="sett_stations_edit_fuel">Edit fuel type</string>
    <string name="add_car_title">Add Car</string>
    <string name="edit_car_title">Edit Car</string>
    <string name="car_name">Car Name</string>
    <string name="car_name_error">Car Name is required</string>
    <string name="select_car">Select this car</string>
	<string name="value_fuel_title">Add fuel type value</string>
	<string name="value_station_title">Add station type value</string>
	<string name="value_name">Name</string>
	<string name="value_name_error">Name is required</string>
	<string name="value_sys_error">You cannot edit system value</string>
	<string name="value_used_error">This value is used!</string>
	<string name="no_reports">No reports</string>
	<string name="total_cost">Total cost</string>
	<string name="total_run">Total run</string>
	<string name="total_fuel">Total fuel volume</string>
	<string name="avg_fuel">AVG</string>
	<string name="cost_per1">Total cost/1</string>
	<string name="total_fuel_cost">Fuel</string>
	<string name="total_service_cost">Service\n(+Engine/Transmission oil)</string>
	<string name="total_service_part_cost">Repair parts</string>
	<string name="total_parking_cost">Parking</string>
	<string name="total_other_cost">Other</string>
	<string name="cost_by_type">Total cost by type</string>
	<string name="cost_by_last4">Total cost(last 4 months)</string>
	<string name="run_by_last4">Run(last 4 months)</string>
	<string name="not_found">Not found</string>
	<string name="not_set">Not set</string>
	<string name="share_text">Car Logbook -  logging events related to your car for getting statistic https://play.google.com/store/apps/details?id=com.enadein.carlogbook</string>
	<string name="author">Author</string>
	<string name="author_value">Eugene Nadein</string>
	<string name="open_src">It is open-source project</string>
	<string name="open_src_val">Source</string>
	<string name="open_src_url">https://github.com/tx-drive/android-car-logbook</string>
	<string name="feedback_lic">License (GNU GPL v3)</string>
	<string name="feedback_lic_val">Read license</string>
	<string name="feedback_rate">Rate this application</string>
	<string name="feedback_label">Feedback</string>
	<string name="feedback_ask">Ask for a feature</string>
	<string name="feedback_provide">Feedback/question/bug report</string>
	<string name="libs_label">Open-Source Frameworks</string>
	<string name="lib1_val">HoloGraphLibrary - a chart library for android </string>
	<string name="lib1_val_url">https://bitbucket.org/danielnadeau/holographlibrary/wiki/Home</string>
	<string name="email">eugene.nadein@gmail.com</string>
	<string name="email_subject_ask">Feature(CarLogbook)</string>
	<string name="email_subject_provide">Feedback(CarLogbook)</string>
	<string name="license_title">License</string>
	<string name="donate">Donate (help for the project)</string>
	<string name="thanks">Thanks for the help!</string>
	<string name="menu_item_import_export">Import/Export</string>
	<string name="imp">Import</string>
	<string name="export">Export</string>
	<string name="file_exists">File exist</string>
	<string name="export_import_error">Error!</string>
	<string name="export_ok">Export is done!</string>
	<string name="import_delete">Erase current database</string>
	<string name="no_data">No Data</string>
	<string name="confirm_import">Are you sure to import?</string>
	<string name="import_ok">Import is done!</string>
	<string name="progress_title">Processing</string>
	<string name="progress_content">Processing</string>
	<string name="error_last_delete">You cannot delete last value</string>
	<string name="google_backup">Google Drive Backup</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="unit_title">Units</string>
	<string name="unit_distance">Distance</string>
	<string name="unit_fuel">Fuel</string>
	<string name="unit_consumption">Consumption</string>
	<string name="unit_currency">Currency</string>
	<string name="na">N/A</string>
	<string name="date_format">Date format</string>
	<string name="other_unit">Fuel,distance,consumption,currency units can be changed on the modify car screen(per car).</string>
	<string name="device">Device</string>
	<string name="cloud">Cloud</string>
	<string name="files">Files</string>
	<string name="others">Other</string>
	<string name="anim">Enable list animation</string>
	<string name="no_car">No Active Car</string>
    <string name="translate">Translation</string>
    <string name="last">last</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="use_coma">Comma separator in numbers</string>
    <string name="no_logs">You do not have events</string>
    <string name="no_notify">You do not have notifications</string>
    <string name="no_cars">You do not have an active car, please add a car</string>
    <string name="avg">avg</string>
    <string name="car">Car</string>
    <string name="car_was_changed">Car is changed to: </string>
    <string name="car_change">Enable car selector(add event screens)</string>
    <string name="select_car_dialog">Select a car</string>
    <string name="consumption">Consumption</string>
    <string name="fillup_total">Fill-ups total</string>
    <string name="fillupMin">Fill-up min volume</string>
    <string name="fillupMax">Fill-up max volume</string>
    <string name="fillupAvg">Fill-up avg volume</string>
    <string name="fuel_volume_month">Fuel volume (this month)</string>
    <string name="fuel_volume_last_month">Fuel volume (last month)</string>
    <string name="fuel_volume_year">Fuel volume (this year)</string>
    <string name="fuel_volume_last_year">Fuel volume (last year)</string>
    <string name="min_days_fillups">Min days between fill-ups</string>
    <string name="max_days_fillups">Max days between fill-ups</string>
    <string name="avg_days_fillups">Avg days between fill-ups</string>
    <string name="dist">Distance</string>
    <string name="total_dist">Total distance</string>
    <string name="odometer_count">Odometer</string>
    <string name="month_dist">Current month distance</string>
    <string name="last_month_dist">Last month distance</string>
    <string name="year_dist">This year distance</string>
    <string name="last_year_dist">Last year distance</string>
    <string name="per_day_dist">Distance per day</string>
    <string name="per_month_dist">Distance per month</string>
    <string name="per_year_dist">Distance per year</string>
    <string name="min_fillup_dist">Min distance between fill-ups</string>
    <string name="max_fillup_dist">Max distance between fill-ups</string>
    <string name="avg_fillup_dist">Avg distance between fill-ups</string>
    <string name="cost">Cost</string>
    <string name="cost_total">Total cost</string>
    <string name="cost_total_month">Total cost this month</string>
    <string name="cost_total_last_month">Total cost last month</string>
    <string name="cost_total_year">Total cost this year</string>
    <string name="cost_total_last_year">Total cost last year</string>
    <string name="cost_price_min">Min fuel price</string>
    <string name="cost_price_max">Max fuel price</string>
    <string name="cost_price_avg">Avg fuel price</string>
    <string name="cost_fillup_min">Min fill-up cost</string>
    <string name="cost_fillup_max">Max fill-up cost</string>
    <string name="cost_fillup_avg">Avg fill-up cost</string>
    <string name="cost_total_per_day">Cost per day</string>
    <string name="cost_total_per_month">Cost per month</string>
    <string name="cost_total_per_year">Cost per year</string>
    <string name="cost_total_per_day_fuel">Fuel cost per day</string>
    <string name="cost_total_per_month_fuel">Fuel cost per month</string>
    <string name="cost_total_per_year_fuel">Fuel cost per year</string>
    <string name="cost_total_per_day_other">Other expenses cost per day</string>
    <string name="cost_total_per_month_other">Other expenses cost per month</string>
    <string name="cost_total_per_year_other">Other expenses cost per year</string>
    <string name="other_type_val">Other type values</string>
    <string name="other_type">Other type</string>
    <string name="add_other_type">Add other type</string>
    <string name="edit_other_type">Edit other type</string>
    <string name="calc">Calculator</string>
    <string name="result">Result</string>
    <string name="fillups_avg">Fill-ups (avg)</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="manuf">Year of Manufacture</string>
    <string name="car_cost">Cost price</string>
    <string name="purchase">Date of purchase</string>
    <string name="open_mil">Opening mileage</string>
	<string name="cost1fuelper1">Fuel cost/1</string>
	<string name="menu_dashboard">Dashboard</string>
	<string name="menu_by_type">By type</string>
	<string name="menu_fuel_rate">Fuel rate</string>
	<string name="menu_last_events">Last events</string>
	<string name="menu_detail">Detail</string>
</resources>