<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	style="@style/add_entity_scroll"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		style="@style/list_main"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:padding="10dp">

		<LinearLayout
			style="@style/wide"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/app_name"/>

			<TextView
				style="@style/about_value"
				android:text="@string/app_ver"/>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/author"/>

			<TextView
				style="@style/about_value"
				android:text="@string/author_value"/>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/open_src"/>

			<TextView android:id="@+id/link_src"
			          android:text="@string/open_src_val"
				style="@style/about_value_link"/>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/feedback_label"/>

			<TextView android:id="@+id/link_ask"
			          android:text="@string/feedback_ask"
			          style="@style/about_value_link"/>
			<TextView android:id="@+id/link_provide"
			          android:text="@string/feedback_provide"
			          style="@style/about_value_link"/>

			<TextView android:id="@+id/link_rate"
			          android:text="@string/feedback_rate"
			          style="@style/about_value_link"/>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/donate"/>

				<LinearLayout style="@style/wrap"
				              android:layout_gravity="center_horizontal"
				              android:orientation="horizontal">
					<Button android:id="@+id/don1" style="@style/wrap" android:text="$1"/>
					<Button android:id="@+id/don2" style="@style/wrap" android:text="$3"/>
					<Button android:id="@+id/don3" style="@style/wrap" android:text="$5"/>
				</LinearLayout>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/feedback_lic"/>

			<TextView android:id="@+id/lic"
			          android:text="@string/feedback_lic_val"
			          style="@style/about_value_link"/>

		</LinearLayout>

		<LinearLayout
			style="@style/wide"
			android:layout_marginTop="6dp"
			android:orientation="vertical">

			<TextView
				style="@style/about_label"
				android:text="@string/libs_label"/>

			<TextView android:id="@+id/lib1"
			          android:text="@string/lib1_val"
			          style="@style/about_value_link"/>

		</LinearLayout>
	</LinearLayout>
</ScrollView>