<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
		<item
			android:title=""
			android:id="@+id/overflow"
			android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
			app:showAsAction="always"
			>
			<menu>
				<item android:id="@+id/menu_dashboard"
					android:title="@string/menu_dashboard"
					android:icon="@null"/>

				<item android:id="@+id/menu_by_type"
					  android:title="@string/menu_by_type"
					  android:icon="@null"/>

				<item android:id="@+id/menu_fuel_rate"
					  android:title="@string/menu_fuel_rate"
					  android:icon="@null"/>

				<item android:id="@+id/menu_last_events"
					  android:title="@string/menu_last_events"
					  android:icon="@null"/>

				<item android:id="@+id/menu_detail"
					  android:title="@string/menu_detail"
					  android:icon="@null"/>
			</menu>
		</item>
</menu>